<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.jmitchell238.aoc</groupId>
  <artifactId>AdventOfCodeJava</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>AdventOfCodeJava</name>
  <description>Project for Advent Of Code solutions</description>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.2.0</version>
    <relativePath/>
  </parent>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>21</java.version>
    <analytics-java.version>3.5.0</analytics-java.version>
    <error-handling-spring-boot-starter.version>4.2.0</error-handling-spring-boot-starter.version>
    <fmt.maven.plugin.version>2.21.1</fmt.maven.plugin.version>
    <httpcomponents.httpclient.version>4.5.14</httpcomponents.httpclient.version>
    <hypersistence-utils-hibernate-60.version>3.6.0</hypersistence-utils-hibernate-60.version>
    <liquibase-sessionlock.version>1.6.7</liquibase-sessionlock.version>
    <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
    <lombok.version>1.18.30</lombok.version>
    <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
    <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
    <ramsey-logging-spring-boot-starter.version>3.1.3</ramsey-logging-spring-boot-starter.version>
    <ramsey-security-spring-boot-starter.version>3.1.2</ramsey-security-spring-boot-starter.version>
    <snakeyaml.version>2.2</snakeyaml.version>
    <sonar-maven-plugin.version>3.10.0.2594</sonar-maven-plugin.version>
    <spring-boot-admin-client.version>3.1.1</spring-boot-admin-client.version>
    <spring-security-test.version>6.1.5</spring-security-test.version>
    <springdoc-openapi-starter-webmvc-ui.version>2.2.0</springdoc-openapi-starter-webmvc-ui.version>
    <junit-jupiter.version>5.8.1</junit-jupiter.version>
  </properties>

  <dependencies>
    <!-- Spring Boot Dependencies -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
    </dependency>

    <!-- Spring Boot Test -->
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>spring-security-test</artifactId>
      <groupId>org.springframework.security</groupId>
      <scope>test</scope>
      <version>${spring-security-test.version}</version>
    </dependency>

    <!-- Lombok for annotations that generate code -->
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- JUnit Dependencies -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit-jupiter.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- SnakeYAML for YAML parsing -->
    <dependency>
      <artifactId>snakeyaml</artifactId>
      <groupId>org.yaml</groupId>
      <version>${snakeyaml.version}</version>
    </dependency>

    <!-- Mapstruct for mapping models -->
    <dependency>
      <artifactId>mapstruct</artifactId>
      <groupId>org.mapstruct</groupId>
      <version>${org.mapstruct.version}</version>
    </dependency>
    <dependency>
      <artifactId>mapstruct-processor</artifactId>
      <groupId>org.mapstruct</groupId>
      <version>${org.mapstruct.version}</version>
    </dependency>
  </dependencies>

  <build>
  <finalName>${project.artifactId}</finalName>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <groupId>org.apache.maven.plugins</groupId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <annotationProcessorPaths>
            <path>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
              <version>${lombok.version}</version>
            </path>
            <path>
              <artifactId>lombok-mapstruct-binding</artifactId>
              <groupId>org.projectlombok</groupId>
              <version>${lombok-mapstruct-binding.version}</version>
            </path>
            <path>
              <artifactId>mapstruct-processor</artifactId>
              <groupId>org.mapstruct</groupId>
              <version>${org.mapstruct.version}</version>
            </path>
          </annotationProcessorPaths>
            <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <groupId>org.springframework.boot</groupId>
        <configuration>
          <excludes>
            <exclude>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
            </exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>fmt-maven-plugin</artifactId>
        <groupId>com.spotify.fmt</groupId>
        <version>${fmt.maven.plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
